reset category button